# patterns-serverless-rust

./: Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
deployment/lib/: dynamodb-stack.ts  lambda-stack.ts
src/: handler.rs
src/graphql/: mutation.rs  query.rs  types.rs
tests/: main_test.rs
