[package]
name = "sls_rust"
version = "0.0.1"
authors = ["Christian <ckl@codetalk.io>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[profile.release]
# Less code to include into binary.
panic = 'abort'
# Optimization over all codebase (better optimization, slower build).
codegen-units = 1
# Optimization for size (more aggresive).
opt-level = 'z' # or 's' for a less aggressiv alternative.
# Link time optimization using using whole-program analysis.
lto = true

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", rev = "c36409c5e65f994c7ff48510cd111905b4aa77c9"}
tokio = { version = "0.2.22", features = ["macros"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
rusoto_core = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_sqs = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_dynamodb = { version = "0.45.0", default_features = false, features=["rustls"] }
dynomite = { version = "0.10.0", default_features = false, features = ["rustls"] }
uuid = "0.8.1"
async-graphql = "1.18.2"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
