[package]
name = "sls_rust"
version = "0.0.1"
authors = ["Christian Kjaer <ckl@codetalk.io>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[profile.release]
panic = 'abort' # Less code to include into binary.
codegen-units = 1 # Optimization over all codebase (better optimization, slower build).
opt-level = 'z' # Optimization for size (or 's' for a less aggressiv alternative).
lto = true # Link time optimization using using whole-program analysis.

[dependencies]
# Until the original project starts moving again, we'll rely on Netlify's fork, which is
# maintained. See https://github.com/awslabs/aws-lambda-rust-runtime/issues/274 for more.
lambda = { package = "netlify_lambda", version = "0.2.0" }
tokio = "1.0.1"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
rusoto_core = { version = "0.46.0", default_features = false, features=["rustls"] }
rusoto_sqs = { version = "0.46.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.46.0", default_features = false, features=["rustls"] }
rusoto_dynamodb = { version = "0.46.0", default_features = false, features=["rustls"] }
# dynomite = { version = "0.10.0", default_features = false, features = ["rustls"] }
dynomite = { git = "https://github.com/softprops/dynomite", commit = "dc8ba09a439b1a4dd1da2a002bae46abcb640e12", default_features = false, features = ["rustls"] }
uuid = "0.8.1"
async-graphql = { version = "2.4.5", default-features = false }
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
